# MADE_Cpp_2022

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  io_example.cpp  main.c  main.cpp  perfomance_measure.cpp  run_perfomance.sh
.github/workflows/: ci.yml
impl/: CMakeLists.txt  data.c  data.h  io.c  io.h  logic.c  logic.h  macros.h  utils.c  utils.h
resources/: software.txt  test.txt
src/: CMakeLists.txt  byte_diff_counter.cpp  byte_diff_counter.h  byte_diff_counter_parallel.cpp  byte_diff_counter_serial.cpp  exceptions.h  matrix.h  rbtree.h  set.h  vector.cpp  vector.h
tests/: CMakeLists.txt  integration.cpp  output.txt  test.txt  test1.c  test_1.txt  test_2.txt  test_data.cpp  test_io.cpp  test_logic.cpp  test_set.cpp  test_utils.cpp  unit.cpp  unit_parallel.cpp  unit_serial.cpp
