add_library(hw1_data data.c)
add_library(hw1_io io.c)
add_library(hw1_utils utils.c)
add_library(hw1_logic logic.c)

if (WITH_COVERAGE)
  target_compile_options(hw1_data PUBLIC -fprofile-arcs -ftest-coverage -fPIC -O0)
  target_compile_options(hw1_io PUBLIC -fprofile-arcs -ftest-coverage -fPIC -O0)
  target_compile_options(hw1_utils PUBLIC -fprofile-arcs -ftest-coverage -fPIC -O0)
  target_compile_options(hw1_logic PUBLIC -fprofile-arcs -ftest-coverage -fPIC -O0)
  target_link_options(hw1_io PUBLIC -coverage -lgcov)
  target_link_options(hw1_data PUBLIC -coverage -lgcov)
  target_link_options(hw1_logic PUBLIC -coverage -lgcov)
  target_link_options(hw1_utils PUBLIC -coverage -lgcov)
endif()

target_link_libraries(hw1_io hw1_data)
target_link_libraries(hw1_utils hw1_data)
target_link_libraries(hw1_logic hw1_io hw1_utils hw1_data)
